--- a/web/jsp/error/header.jspf
+++ b/web/jsp/error/header.jspf
@@ -1,5 +1,5 @@
 <%@ page isErrorPage="true"%>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<%@ page contentType="text/html;charset=UTF-8"%>
 <%@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt" %>
 <%@ page isELIgnored="false" %>
 
